2004-12-07  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/util/Timer/taskException.java:
	Fixed the test.

2004-12-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* gnu/testlet/java/io/ObjectInputOutput/Deserializable.java: New
	test.
	
2004-12-06  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/io/BufferedInputStream/ZeroRead.java:
	New test.

2004-12-06  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/io/ObjectInputOutput/ExtTest.java:
	New test.

2004-12-03  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/Class/ClassTest.java:
	A couple more Class.forName tests.
	* gnu/testlet/java/lang/ref/PhantomReference/phantom.java:
	Made a little more robust.

2004-12-01  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/URLConnection/getHeaderFields.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getNextPreviousNode.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getPath.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/pathFromAncestorEnumeration.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/add.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/breadthFirstEnumeration.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/children.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/constructors.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/DefaultMutableTreeNodeTest.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getAllowsChildren.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildAfter.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildAt.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildBefore.java,