@@ -1,3 +1,7 @@
+2004-12-12  Thomas Zander <zander@kde.org>
+
+	* gnu/testlet/javax/swing/JPanel/Layouter.java: New test.
+
 2004-12-07  Jeroen Frijters  <jeroen@frijters.net>
 
 	* gnu/testlet/java/util/Timer/taskException.java:
